kubernetes/apps/quizzer/quizzer/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizzer
  namespace: quizzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quizzer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quizzer
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: forgejo-registry
      containers:
        - name: quizzer
          image: git.finnethen.com/finn/quizzer:v1.1.0
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
