kubernetes/apps/quizzer/quizzer/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizzer
  namespace: quizzer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quizzer
  ports:
    - name: http
      port: 80
      targetPort: 3000
